Fix overlapping divs
With z-index rather than margin, to avoid horizontal scrollbar appears

--- a/css/panels.css
+++ b/css/panels.css
@@ -923,6 +923,7 @@ body { background: #cf0; } */
 	height: 25%;
 	border-bottom: 3px solid #212D39;
         border-right: 3px solid #212D39;
+	z-index: 12;
 }
 #lib-artist {
         position: absolute;
@@ -932,6 +933,7 @@ body { background: #cf0; } */
         height: 75%;
 	margin-top: 3px;
         border-right: 3px solid #212D39;
+	z-index: 12;
 }
 #lib-album {
         position: absolute;
@@ -940,7 +942,7 @@ body { background: #cf0; } */
 	width: 25%;
 	height: 100%;
         border-right: 3px solid #212D39;
-        margin-left: 1px;
+        z-index: 11;
 }
 #lib-file {
         position: absolute;
@@ -948,7 +950,7 @@ body { background: #cf0; } */
         left: 50%;
 	width: 50%;
 	height: 100%;
-        margin-left: 2px;
+        z-index: 10;
 }
 
 #lib-content ul {
